--- a/gradle.properties
+++ b/gradle.properties
@@ -2,18 +2,18 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
-mod_version = 0.9.3
+mod_version = 0.10.0
 maven_group = troy.autofish
 archives_base_name = autofish
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html or https://fabricmc.net/use
-minecraft_version=1.17
-yarn_mappings=1.17+build.1
-loader_version=0.11.3
+minecraft_version=1.18-pre5
+yarn_mappings=1.18-pre5+build.4
+loader_version=0.12.5
 
 #Fabric API
-fabric_version=0.34.10+1.17
+fabric_version=0.42.8+1.18
 
 #Cloth Config API
-cloth_config_version=5.0.34
+cloth_config_version=6.0.43
